@@ -1,6 +1,10 @@
 2015-09-08  Niibe Yutaka  <gniibe@fsij.org>
 
-	* chopstx.c (intr_lock): New variable.
+	* chopstx.c (chx_request_preemption): Add PRIO argument and check
+	the condition inside.
+	(chx_timer_expired, chx_handle_intr): Call unconditionally.
+	(intr_lock): New variable.
+
 	* chopstx.h (chx_intr): Remove member LOCK.
 
 2015-09-07  Niibe Yutaka  <gniibe@fsij.org>
